--- a/style.css
+++ b/style.css
@@ -37,7 +37,19 @@ header {
   padding: 2px;
 }
 
-#cards{
+#choice1{
+	padding: 2px;
+	width: 300px;
+    height: 20vw;
+}
+
+#choice3{
+	padding: 2px;
+	width: 300px;
+    height: 20vw;
+}
+
+#choice2{
 	padding: 2px;
 	width: 300px;
     height: 20vw;
